--- a/Netytar/Netytar.csproj
+++ b/Netytar/Netytar.csproj
@@ -85,6 +85,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Settings.xaml.cs">
+      <DependentUpon>Settings.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Surface\AutoScroller.cs" />
     <Compile Include="Surface\ButtonsSettings\ButtonsSettingsInvert.cs" />
     <Compile Include="Surface\ButtonsSettings\ButtonsSettingsStandard.cs" />
@@ -131,6 +134,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Settings.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
